<resources>
    <string name="title_toolbar_app"><b>SIPSA</b></string>
    <string name="title_toolbar_anio"><b>2020</b></string>
    <string name="title_tiempo"></string>
    <string name="title_tiempo_segundos"></string>
    <string name="title_estado">Guardado</string>
    <string name="title_guardar_capitulo">Guardar Capitulo</string>
    <string name="title_resultado_capitulo">Ir a Resultado Entrevista</string>
    <string name="title_agregar_capitulo">Agregar</string>
    <string name="title_limpiar_capitulo">Limpiar</string>
    <string name="title_cancelar_capitulo">Cancelar</string>
    <string name="title_aceptar">Aceptar</string>
    <string name="title_version">Version 1.0</string>
    <string name="title_copyright">© 2021 - DANE, Colombia</string>
    <string name="title_informacion">Información</string>
    <string name="title_opciones">Opciones</string>
    <string name="title_estados">Estados</string>
    <string name="title_leyenda_opciones">Leyenda Opciones</string>
    <string name="title_leyenda_estados">Leyenda Estados</string>
    <string name="error_sincronizacion">ha ocurrido un error en la sincronizacion. El servidor a generado un error.</string>
    <string name="error_ir_entrevista_guardado_capitulo">Antes de pasar a "Ir Resultado Entrevista", debe realizar el guardado del capítulo.</string>
    <string name="guardado_capitulo">Se realizó el guardado del capítulo.</string>
    <string name="title_sincronizar">Estado que permite validar la sincronización (No Validado)</string>
    <string name="title_sincronizar_verde">Estado que permite validar la sincronización (Validado)</string>
    <string name="title_sincronizar_doble">Estado que permite validar la sincronización fue entregada en el servidor (No Validado)</string>
    <string name="title_sincronizar_doble_verde"> Estado que permite validar la sincronización fue entregada en el servidor (Validado)</string>
    <string name="title_sincronizar_nube">Estado que permite validar si el servidor retorno respuesta (No Validado)</string>
    <string name="title_sincronizar_nube_verde">Estado que permite validar si el servidor retorno respuesta (Validado)</string>
    <string name="title_capitulo_entrevista">Formulario para el registro de la <b>Entrevista Generada</b>.</string>
    <string name="app_name">SIPSA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Limpiar</string>
    <string name="nav_item_fuentes">Fuentes</string>
    <string name="nav_item_estadisticas">Estadisticas</string>
    <string name="nav_item_configuracion">Configuración</string>
    <string name="drawer_header_text">Nombre Usuario</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id al</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_fuentes">Fuentes</string>
    <string name="action_search">Buscar</string>
    <string name="btn_recolectar">Recolectar</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_editar_distrito">Editar Fuente</string>
    <string name="icon_inquiry">&#xf044;</string>
    <string name="icon_check">&#xf058;</string>
    <string name="icon_fa_angle_double_right">&#xf101;</string>
    <string name="icon_notification">&#xf0e5;</string>
    <string name="title_activity_activity_fuente_detalle">activity_fuenteDetalle</string>
    <string name="nombre">Nombre Fuente</string>
    <string name="direccion">Dirección</string>
    <string name="informante">Informante</string>
    <string name="municipio">Ciudad</string>
    <string name="grupoFuente">Grupo Fuente</string>
    <string name="estrato">Estrato</string>
    <string name="sector">Sector</string>
    <string name="seccion">Sección</string>
    <string name="manzana">Manzana</string>
    <string name="clase">Clase</string>
    <string name="pe">PE</string>
    <string name="is">IS</string>
    <string name="telefono">Telefono</string>
    <string name="telefonoInformante">Telefono Informante</string>
    <string name="fax">Fax</string>
    <string name="email">Email</string>
    <string name="idtipoPuntoVenta">Tipo Punto Venta</string>
    <string name="zona">Zona</string>
    <string name="codigoInterno">Codigo Interno</string>
    <string name="municipioDistrito">Municipio Distrito</string>
    <string name="primerNivel">Primer Nivel</string>
    <string name="segundoNivel">Segundo Nivel</string>
    <string name="pendientes">Pendientes</string>
    <string name="existentes">Existentes</string>
    <string name="existentesDistrito">ExistentesDis</string>
    <string name="relativas">Relativas</string>
    <string name="todas">Todas</string>
    <string name="artiCaraValores">Observacion</string>
    <string name="indeces">Indices</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="selecionarTodas">Seleccionar Todas</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="prop">Prop</string>
    <string name="nombre_fuente_complementaria">Nombre Fuente Complementaria</string>
    <string name="obtenerMensual">Obtener Mensual</string>
    <string name="obtenerRecoleccion">Obtener Recolección</string>
    <string name="actualizarFecha">Actualizar Fecha</string>
    <string name="subirRecoleccion">Subir Recolección</string>
    <string name="valorActual">Información Actual</string>
    <string name="valorOriginal">Información Original</string>
    <string name="success">Información Cargada Exitosamente</string>
    <string name="cantidadInvalida">Cantidad Invalida</string>
    <string name="cantidad">Cantidad</string>
    <string name="invalido">Campo requerido</string>
    <string name="invalido_cuatro_cifras">Debe tener cuatro cifras</string>
    <string name="invalido_dos_cifras">Debe tener dos cifras</string>
    <string name="correo_invalido">Correo Invalido</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="DB_PATH">AlistamientoDMC</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="label_visualizar">Opción que permite visualizar la recolección de la fuente</string>
    <string name="label_editar">Opción que permite editar la fuente.</string>
</resources>