<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linear_item"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:layout_marginVertical="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:text="@string/title_leyenda_opciones"
            style="@style/titulo_negrita"
            android:textColor="@color/dane"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            app:tint="@color/verde"
            app:srcCompat="@drawable/ic_edit" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:text="@string/label_editar"
            style="@style/titulo_negrita"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            app:tint="@color/verde"
            app:srcCompat="@drawable/baseline_zoom_in_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:text="@string/label_visualizar"
            style="@style/titulo_negrita"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>





</LinearLayout>