<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/blanco"
    tools:context=".ListaObservacionActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_sipsa"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/atrasListaObservaciones"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:background="@color/color_sipsa"
                style="@style/titulo_negrita"
                app:srcCompat="@drawable/ic_arrow_back"/>
            <TextView
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textColor="@color/blanco"
                android:fontFamily="sans-serif"
                style="@style/titulo_negrita"
                android:text="Lista de Observaciones" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/color_sipsa"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/titulo_negrita"
                    android:textSize="10dp"
                    android:textColor="@color/blanco"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/color_sipsa"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/titulo_negrita"
                    android:textSize="10dp"
                    android:textColor="@color/blanco"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:showDividers="middle">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radioGroup"
                android:layout_gravity="center_horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:tag="SI"
                    android:text="@string/existentes"
                    android:id="@+id/rbExistentes" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:tag="NO"
                    android:text="@string/relativas"
                    android:id="@+id/rbRelativas"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:tag="NO"
                    android:text="@string/todas"
                    android:id="@+id/rbTodas" />

            </RadioGroup>



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="60dp"
                android:paddingLeft="0dp"
                android:textColor="@color/dane"
                style="@style/titulo_negrita"
                android:text="@string/title_informacion"/>

        </LinearLayout>



    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaObervaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollbars="vertical" />


    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/agregarObservacion"
                style="@style/btn_rojo"
                android:padding="5dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:orientation="horizontal" >
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    app:srcCompat="@drawable/ic_save"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/ms_white"
                    android:text="Agregar"
                    style="@style/titulo_negrita" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/nuevoObservacion"
                style="@style/btn_rojo"
                android:padding="5dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="5dp">
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    app:srcCompat="@drawable/ic_add"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/ms_white"
                    style="@style/titulo_negrita"
                    android:text="Nuevo" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>